--- a/public/index.html
+++ b/public/index.html
@@ -42,6 +42,10 @@
 <link href="assets/admin/layout3/css/themes/default.css" rel="stylesheet" type="text/css" id="style_color">
 <link href="assets/admin/layout3/css/custom.css" rel="stylesheet" type="text/css">
 
+<!-- <link href="assets/admin/layout/css/layout.css" rel="stylesheet" type="text/css"/>
+<link href="assets/admin/layout/css/themes/default.css" rel="stylesheet" type="text/css" id="style_color"/>
+<link href="assets/admin/layout/css/custom.css" rel="stylesheet" type="text/css"/> -->
+
 <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
 
 <script src="assets/global/plugins/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
@@ -54,7 +58,7 @@
 
     <title>React App</title>
   </head>
-  <body>
+  <body class="login">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
