--- a/public/index.html
+++ b/public/index.html
@@ -58,7 +58,7 @@
 
     <title>React App</title>
   </head>
-  <body class="login">
+  <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
